--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <p>Calculo en una Variable</p>
       <li>Docente: Arpita Deza Rosa Elena</li>
       <p>Historia Occidental</p>
-      <li></li>
+      <li>Amparo Isela Chalco Chavez</li>
       <p>Filosofia de la Naturaleza</p>
       <li>María Belén Bocchio Linares</li>
       <p>Pensamiento Computacional</p>
@@ -115,20 +115,22 @@
       <h2>Los compañeros que llevan conmigo</h2>
       <ul>
         <li>Ariadna Paredes</li>
-        <p><a href="https://pe.linkedin.com/in/ariadna-paredes-109895357" target="_blank">Su presentación</a></p>
+        <p><a href="https://ariadna136.github.io/Pagina-Web/">Su presentación</a></p>
         <li>Dulce Llanllaya</li>
-        <p><a href="https://www.linkedin.com/in/david-cristian-llavilla-ccari-56b552197?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Su presentación</a></p>
+        <p><a href="https://xulcemaria.github.io/Dulce-Maria-Llanllaya-Garcia/">Su presentación</a></p>
         <li>Leonardo Cruz</li>
     <p><a href="https://leonardocruz28.github.io/" target="_blank">Su presentación</a></p>
        <li> Anghelina Quispe </li>
 <p><a href="https://anghelyquis.github.io/Anghely-Quis.github.io/" target="_blank">Su presentación</a></p>
+         <li> Duany Gonzales </li>
+<p><a href="https://dagh-dagh.github.io/duanygonzales.github.io/">Su presentación</a></p>
       </ul>
     </div>
 
     <footer>
       <H3>  CONTACTO </h3>
       <p><a href="https://pe.linkedin.com/in/david-cristian-llavilla-ccari-56b552197" target="_blank">Mi Linkedin</a></p>
-      <p>Contacto: davi.llavilla@ucsp.edu.pe</p>
+      <p><a href="https://mail.google.com/mail/u/0/?hl=es-419#inbox" target="_blank">Mi correo</a></p>
     </footer>
   </div>
 </body>
