--- a/index.html
+++ b/index.html
@@ -111,15 +111,15 @@
       <li>Doncente: Ernesto Cadra Vargas</li>
     </div>
 
-    <div class="card">
+     div class="card">
       <h2>Los compañeros que llevan conmigo</h2>
       <ul>
         <li>Ariadna Paredes</li>
-        <p><a href="https://ariadna136.github.io/Pagina-Web/">Su presentación</a></p>
+<p><a href="https://ariadna136.github.io/Pagina-Web/">Su presentación</a></p>
         <li>Dulce Llanllaya</li>
-        <p><a href="https://xulcemaria.github.io/Dulce-Maria-Llanllaya-Garcia/">Su presentación</a></p>
+p><a href="https://xulcemaria.github.io/Dulce-Maria-Llanllaya-Garcia/">Su presentación</a></p>
         <li>Leonardo Cruz</li>
-    <p><a href="https://leonardocruz28.github.io/" target="_blank">Su presentación</a></p>
+<p><a href="https://leonardocruz28.github.io/" target="_blank">Su presentación</a></p>
        <li>Anghelina Quispe </li>
 <p><a href="https://anghelyquis.github.io/Anghely-Quis.github.io/" target="_blank">Su presentación</a></p>
          <li>Duany Gonzales </li>
