--- a/index.html
+++ b/index.html
@@ -99,16 +99,22 @@
       <h2>Los cursos que llevo</h2>
       <p>Analisis Financiero</p>
       <li>Docente: María Belén Bocchio Linares</li>
+      <p><a href="https://pe.linkedin.com/in/mar%C3%ADa-bel%C3%A9n-bocchio-linares-96846035" target="_blank">!Click aquí¡</a></p>
       <p>Comportamiento del Consumidor</p>
       <li>Docente: Miguel Salomón</li>
+      <p><a href="https://pe.linkedin.com/in/fabiola-postigo-99996b3b" target="_blank">!Click aquí¡</a></p><
       <p>Calculo en una Variable</p>
       <li>Docente: Arpita Deza Rosa Elena</li>
+      <p><a href="https://dina.concytec.gob.pe/appDirectorioCTI/VerDatosInvestigador.do;jsessionid=351770571c155d27537e1a415bed?id_investigador=140259" target="_blank">!Click aquí¡</a></p>
       <p>Historia Occidental</p>
       <li>Doncente: Amparo Isela Chalco Chavez</li>
+      <P><a href="https://pe.linkedin.com/in/mario-rommel-arce-espinoza-94585b19a" target="_blank">!Click aquí¡</a></P>
       <p>Filosofia de la Naturaleza</p>
-      <li>Doncente: María Belén Bocchio Linares</li>
+      <li>Doncente: David Luis Matto Neyra</li>
+      <p><a href="https://www.facebook.com/davidluis.mattoneyra/" target="_blank">!Click aquí¡</a></p>
       <p>Pensamiento Computacional</p>
       <li>Doncente: Ernesto Cadra Vargas</li>
+      <p><a href="https://pe.linkedin.com/in/ecuadrosv" target="_blank">!Click aquí¡</a></p>
     </div>
 
      <div class="card">
