--- a/index.html
+++ b/index.html
@@ -98,23 +98,17 @@
     <div class="card">
       <h2>Los cursos que llevo</h2>
       <p>Analisis Financiero</p>
-      <li>Docente: María Belén Bocchio Linares</li>
-      <p><a href="https://pe.linkedin.com/in/mar%C3%ADa-bel%C3%A9n-bocchio-linares-96846035" target="_blank">!Click aquí¡</a></p>
+ <li>Docente: <a href="https://pe.linkedin.com/in/mar%C3%ADa-bel%C3%A9n-bocchio-linares-96846035" target="_blank" María Belén Bocchio Linares</a></li>
       <p>Comportamiento del Consumidor</p>
-      <li>Docente: Miguel Salomón</li>
-      <p><a href="https://pe.linkedin.com/in/fabiola-postigo-99996b3b" target="_blank">!Click aquí¡</a></p><
+      <li>Docente: <a href="https://pe.linkedin.com/in/fabiola-postigo-99996b3b" target="_blank" Miguel Salomón</a></li>
       <p>Calculo en una Variable</p>
-      <li>Docente: Arpita Deza Rosa Elena</li>
-      <p><a href="https://dina.concytec.gob.pe/appDirectorioCTI/VerDatosInvestigador.do;jsessionid=351770571c155d27537e1a415bed?id_investigador=140259" target="_blank">!Click aquí¡</a></p>
+      <li>Docente: <a href="https://dina.concytec.gob.pe/appDirectorioCTI/VerDatosInvestigador.do;jsessionid=351770571c155d27537e1a415bed?id_investigador=140259" target="_blank" Arpita Deza Rosa Elena</a></li>
       <p>Historia Occidental</p>
-      <li>Doncente: Amparo Isela Chalco Chavez</li>
-      <P><a href="https://pe.linkedin.com/in/mario-rommel-arce-espinoza-94585b19a" target="_blank">!Click aquí¡</a></P>
+      <li>Doncente: <a href="https://pe.linkedin.com/in/mario-rommel-arce-espinoza-94585b19a" target="_blank" Amparo Isela Chalco Chavez</a></li>
       <p>Filosofia de la Naturaleza</p>
-      <li>Doncente: David Luis Matto Neyra</li>
-      <p><a href="https://www.facebook.com/davidluis.mattoneyra/" target="_blank">!Click aquí¡</a></p>
+      <li>Doncente: <a href="https://www.facebook.com/davidluis.mattoneyra/" target="_blank" David Luis Matto Neyra</a></li>
       <p>Pensamiento Computacional</p>
-      <li>Doncente: Ernesto Cadra Vargas</li>
-      <p><a href="https://pe.linkedin.com/in/ecuadrosv" target="_blank">!Click aquí¡</a></p>
+      <li>Doncente: <a href="https://pe.linkedin.com/in/ecuadrosv" target="_blank" Ernesto Cadra Vargas</a></li>
     </div>
 
      <div class="card">
